--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,107 @@ body{
     max-width: 100%;
 }
 
-.skillSection{
+.skillSection,
+.contactSection{
     background-color: #e74c3c;
     color: #fff
+}
+
+.skill{
+    text-align: center;
+    margin-left: 10px;
+}
+
+.chart{
+    position: relative;
+    width: 152px;
+    height: 152px;
+    display: inline-block;
+    text-align: center;
+}
+
+.chart canvas{
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.chart .percent{
+    color:black;
+    line-height: 150px;
+    display: inline-block;
+    font-size:35px;
+}
+
+.chart .percent:after{
+    content: '%';
+}
+
+.squareItem{
+    position:relative;
+    margin-top:30px;
+}
+
+.squareInnerContainer{
+    padding: 50px 15px 35px;
+    position: relative;
+    text-align: center;
+    border:2px solid black;
+    border-top:none;
+}
+
+.squareInnerContainer:before,
+.squareInnerContainer:after{
+    content: '';
+    position: absolute;
+    top: 0px;
+    width: 30%;
+    border-bottom: 2px solid black;
+}
+
+.squareInnerContainer:before{
+    right: 0px;
+}
+
+.squareInnerContainer:after{
+    left: 0px;
+}
+
+.squareContent h2{
+    font-size: 50px;
+    margin-bottom: 10px;
+    font-weight: 400;
+    color: red;
+}
+
+.squareContent h4{
+    font-size: 15px;
+    font-weight: 600;
+    margin:0;
+}
+
+.squareIcon{
+    position: absolute;
+    width: 40%;
+    height: 60px;
+    font-size: 45px;
+    left: 50%;
+    top: -30px;
+    margin-left: -20%;
+    color: #444;
+}
+
+.contactButton{
+    color: #fff;
+    padding: 15px 20px;
+    display: inline-block;
+    margin-top: 20px;
+    border: 1px solid white;
+    border-radius: 10px;
+}
+
+.contactButton:hover{
+    text-decoration: none;
+    background-color: white;
+    color: red;
 }
