--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,42 @@
-body{
-    font-size: 14px;
+body {
+	font-size: 14px;
     color: #333;
     background-color: #fff;
     letter-spacing: 1px;
 }
 
-.overlay{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 3;
-    background-color: rgba(0, 0, 0, 0.5)
+.overlay {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: 3;
+	background-color: rgba(0, 0, 0, 0.4);
 }
 
-.titleMsg{
-    position: absolute;
+.slides-navigation {
+	z-index: 6;
+}
+
+.slides-navigation .prev,
+.slides-navigation .next {
+	width: 47px;
+	height: 47px;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.slides-navigation a.prev {
+	left: 20px;
+	background-image: url(../img/icons/prev.png);
+}
+
+.slides-navigation a.next {
+	right: 20px;
+	background-image: url(../img/icons/next.png);
+}
+
+.titleMessage {
+	position: absolute;
     width: 100%;
     height: 250px;
     top: 50%;
@@ -23,233 +45,234 @@ body{
     margin-top: -125px;
 }
 
-.titleMsg .heading p{
-    color: #fff;
+.titleMessage .heading p {
+	color: #fff;
     text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
     font-weight: 100;
-    letter-spacing: 6px;
+    letter-spacing: 7px;
 }
 
-.titleMsg .heading .main{
-    font-size: 40px;
+.titleMessage .heading .main {
+	font-size: 50px;
 }
 
-.titleMsg .heading .sub{
-    font-size: 20px;
+.titleMessage .heading .sub {
+	font-size: 23px;
 }
 
-.slides-navigation {
-    z-index: 6;
+.section {
+	padding: 100px 0;
 }
 
-.slides-navigation .prev,
-.slides-navigation .next{
-    width: 48px;
-    height: 48px;
-    background-size: cover;
-    background-repeat: no-repeat;
+.aboutImage {
+	max-width: 100%;
 }
 
-.slides-navigation a.prev{
-    left: 20px;
-    background-image: url(../img/icons/prev.png);
+.skillsSection,
+.contactSection
+ {
+	background-color: #e74c3c;
+	color: #fff;
 }
 
-.slides-navigation a.next{
-    right: 20px;
-    background-image: url(../img/icons/next.png);
+.skill {
+	text-align: center;
+	margin-left: 10px;
 }
 
-.section{
-    padding: 100px 0;
-}
-
-.aboutImage{
-    max-width: 100%;
-}
-
-.skillSection,
-.contactSection{
-    background-color: #e74c3c;
-    color: #fff
-}
-
-.skill{
-    text-align: center;
-    margin-left: 10px;
-}
-
-.chart{
-    position: relative;
+.chart {
+	position: relative;
     width: 152px;
     height: 152px;
     display: inline-block;
     text-align: center;
 }
 
-.chart canvas{
-    position: absolute;
+.chart canvas {
+	position: absolute;
     left: 0;
     top: 0;
 }
 
-.chart .percent{
-    color:black;
-    line-height: 150px;
+.chart .percent {
+	color: #000;
+    line-height: 152px;
     display: inline-block;
-    font-size:35px;
+    font-size: 35px;
 }
 
-.chart .percent:after{
-    content: '%';
+.chart .percent:after {
+	content: '%';
 }
 
-.squareItem{
-    position:relative;
-    margin-top:30px;
-}
 
-.squareInnerContainer{
-    padding: 50px 15px 35px;
+.squareItem {
+	margin-top: 30px;
     position: relative;
-    text-align: center;
-    border:2px solid black;
-    border-top:none;
+}
+
+.squareInnerContainer {
+	position: relative;
+	padding: 50px 15px 35px;
+	text-align: center;
+	border: 2px solid #444;
+	border-top: none;
 }
 
 .squareInnerContainer:before,
-.squareInnerContainer:after{
-    content: '';
-    position: absolute;
-    top: 0px;
-    width: 30%;
-    border-bottom: 2px solid black;
+.squareInnerContainer:after {
+	content: '';
+	position: absolute;
+	top: 0px;
+	width: 30%;
+	border-bottom: 2px solid #444;
 }
 
-.squareInnerContainer:before{
-    right: 0px;
+
+.squareInnerContainer:before {
+	right: 0px;
 }
 
-.squareInnerContainer:after{
-    left: 0px;
+.squareInnerContainer:after {
+	left: 0px
 }
 
-.squareContent h2{
-    font-size: 50px;
-    margin-bottom: 10px;
-    font-weight: 400;
-    color: red;
+
+.squareContent h2 {
+	font-size: 56px;
+	margin-bottom: 10px;
+	font-weight: 400;
+	color: #e74c3c;
 }
 
-.squareContent h4{
-    font-size: 15px;
-    font-weight: 600;
-    margin:0;
+.squareContent h3 {
+	font-size: 13px;
+	font-weight: 600;
+	margin: 0;
 }
 
-.squareIcon{
-    position: absolute;
+.squareIcon {
+	position: absolute;
+    left: 50%;
+    top: -30px;
     width: 40%;
     height: 60px;
     font-size: 45px;
-    left: 50%;
-    top: -30px;
     margin-left: -20%;
     color: #444;
 }
 
-.contactButton{
-    color: #fff;
+.contactButton {
+	color: #fff;
     padding: 15px 20px;
     display: inline-block;
     margin-top: 20px;
-    border: 1px solid white;
-    border-radius: 10px;
+    border: 1px solid #fff;
+    border-radius: 2px;
 }
 
-.contactButton:hover{
-    text-decoration: none;
-    background-color: white;
-    color: red;
+.contactButton:hover {
+	text-decoration: none;
+	color: #e74c3c;
+	background-color: #fff;
 }
 
-.filter a{
-    color: #bdc3c7;
-    border: 1px solid #bdc3c7;
-    padding: 10px 18px;
-    display: block;
+.filter a {
+	color: #bdc3c7;
+	border: 1px solid #bdc3c7;
+	padding: 10px 18px;
+	display: block;
 }
 
-.filter li{
-    display: inline-block;
-    padding: 5px;
+.filter li {
+	display: inline-block;
+	padding: 5px
 }
 
-.filter .current{
-    background-color: red;
-    border-color: red;
-    color: white;
+.filter .current {
+	background-color: #e74c3c;;
+	border-color: #e74c3c;
+	color: #fff;
 }
 
-.filter{
-    text-align: center;
-    width: 100%;
+.filter {
+	text-align: center;
+	width: 100%;
 }
 
-.section .heading{
-    text-align: center;
-    padding-bottom: 40px;
-    width: 100%;
+.section .heading {
+	text-align: center;
+	padding-bottom: 40px;
+	width: 100%;
 }
 
-.itemsContiner{
-    width: 100%;
+.items li {
+	display: inline-block;
+	padding: 5px;
 }
 
-.items li{
-    display: inline-block;
-    padding: 5px;
+.itemsContainer {
+	width: 100%;
 }
 
-.items li img{
-    width: 100%;
-    -webkit-transition: all 0.2s linear, 0.3s;
-    -moz-transition: all 0.2s linear, 0.3s;
-    -o-transition: all 0.2s linear, 0.3s;
-    -ms-transition: all 0.2s linear, 0.3s;
-    -transition: all 0.2s linear, 0.3s;
+
+.items li img {
+	width: 100%;
+	-webkit-transition: all 0.2s linear, 1s;
+    -moz-transition: all 0.2s linear, 1s;
+    -o-transition: all 0.2s linear, 1s;
+    -ms-transition: all 0.2s linear, 1s;
+    -transition: all 0.2s linear, 1s;
 }
 
-.item > button:first-child{
-    position: absolute;
-    width: 40px;
-    height: 15%;
+.items .item {
+	position: relative;
+	display: block;
+	overflow: hidden;
+}
+
+.items .icons {
+	position: absolute;
+    width: 90px;
+    height: 40px;
+    left: 50%;
     top: 50%;
-    margin: 50px auto 0 -40px;
+    margin: -20px auto 0 -50px;
+    text-align: center;
     z-index: 3;
-    float: left;
-    left: -150px;
-    -webkit-transition: all 0.2s linear, 0.3s;
-    -moz-transition: all 0.2s linear, 0.3s;
-    -o-transition: all 0.2s linear, 0.3s;
-    -ms-transition: all 0.2s linear, 0.3s;
-    -transition: all 0.2s linear, 0.3s;
 }
 
-.items .item{
+.items .icons i {
+	color: #fff;
+    font-size: 20px;
+    margin-top: 9px;
+}
+
+.items button {
+	width: 40px;
+    height: 40px;
+    background-color: #e74c3c;
     position: relative;
-    display: block;
-    overflow: hidden;
+    display: inline-block;
+
+
+    -webkit-transition: all 0.2s linear, 0.2s;
+    -moz-transition: all 0.2s linear, 0.2s;
+    -o-transition: all 0.2s linear, 0.2s;
+    -ms-transition: all 0.2s linear, 0.2s;
+    -transition: all 0.2s linear, 0.2s;
+
 }
 
-.items .imageOverlay{
-    width: 100%;
+.items .imageOverlay {
+	width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
     left: 0px;
     top: 0px;
     opacity: 0;
+
     -webkit-transition: all 0.2s linear, 1s;
     -moz-transition: all 0.2s linear, 1s;
     -o-transition: all 0.2s linear, 1s;
@@ -257,23 +280,81 @@ body{
     -transition: all 0.2s linear, 1s;
 }
 
-.items .item:hover .imageOverlay{
-    opacity: 1;
+.items .item:hover .imageOverlay {
+	opacity: 1;
 }
 
-.items .item:hover .btn{
-    left: 150px;
-
+.items button {
+	float: left;
+	left: -200px;
 }
 
-.items .item:hover img{
-    -webkit-transform: scale(1.05, 1.05);
+.items .item:hover button {
+	left: 30px;
+}
+
+
+.items .item:hover img {
+	-webkit-transform: scale(1.05, 1.05);
     -moz-transform: scale(1.05, 1.05);
     -o-transform: scale(1.05, 1.05);
     -ms-transform: scale(1.05, 1.05);
     -transform: scale(1.05, 1.05);
 }
 
-.items{
-    margin-left: 100px;
+.items {
+	padding: 0;
+}
+
+.copyrightSection{
+    background-color: #e74c3c;
+    color: #fff;
+    padding: 30px 5px;
+}
+
+.copyrightSection p{
+    margin: 0;
+}
+
+#navigation{
+    width: 100%;
+    background-color: #e74c3c;
+    padding: 20px 10px;
+    z-index: 100;   
+}
+
+#navigation li{
+    padding: 0 10px;
+}
+
+#navigation li a,
+.navbar-brand,
+.navbar-brand:hover{
+    color: white;
+}
+
+.navbar-toggler-icon{
+    background: url(../img/icons/menu.png);
+    background-size: 100%
+}
+
+.fixedNav #navigation{
+    position: fixed;
+    top: 0;
+}
+
+.loader{
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    position: fixed;
+    z-index: 1000;
+    top: 0px;
+    left: 0px;
+}
+
+.loader .inner{
+    width: 100%;
+    height: 100%;
+    background: url(../img/icons/loader.gif) center center no-repeat;
 }
