--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,7 @@ body {
 	z-index: 3;
 	background-color: rgba(0, 0, 0, 0.4);
 }
-#navigation{
-    position: -webkit-sticky;
-    position: sticky;
-    top:0;
 
-}
 .slides-navigation {
 	z-index: 6;
 }
@@ -44,11 +39,13 @@ body {
 
 .titleMessage .heading .main {
     font-size: 50px;
-    font-family: 'Concert One', cursive;
+    font-family: 'Jura', sans-serif;
+    font-weight: bold;
 }
 
 .titleMessage .heading .sub {
-	font-size: 23px;
+    font-size: 23px;
+    font-family: 'Ubuntu Condensed', sans-serif;
 }
 
 .section {
@@ -60,12 +57,12 @@ body {
     transition: 0.3s;
     padding-left: 0;
     padding-right:0;
-    border-radius: 15px;
+    /*border-radius: 15px;*/
 }
 
 .aboutImage {
     max-width: 100%;
-    border-radius: 15px 15px 0 0;
+    /*border-radius: 15px 15px 0 0;*/
 }
 
 .myName{
@@ -84,7 +81,8 @@ body {
 .portfolioSection
  {
 	background-color: #5e003e;
-	color: #fff;
+    color: #fff;
+    font-family: 'Ubuntu Condensed', sans-serif;
 }
 
 .skill {
@@ -184,6 +182,21 @@ body {
     margin-top: 20px;
     border: 1px solid #5e003e;
     border-radius: 2px;
+    font-weight: bold;
+}
+
+.social{
+    color: #5e003e;
+    width: 40%;
+    height: 60px;
+    font-size: 45px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.contactSection{
+    padding: 70px 0;
+    font-family: 'Ubuntu Condensed', sans-serif;
 }
 
 .contactButton:hover {
@@ -205,9 +218,17 @@ body {
 }
 
 .filter .current {
-	background-color: #5e003e;;
-	border-color: #5e003e;
-	color: #fff;
+	background-color: #fff;;
+	border-color: #fff;
+    color: #5e003e;
+    text-decoration: none;
+}
+
+.filter a:hover {
+    background-color: white;
+	border-color: white;
+    color: #5e003e;
+    text-decoration: none;
 }
 
 .filter {
@@ -227,9 +248,9 @@ body {
 }
 
 .itemsContainer {
-	width: 100%;
+    width: 100%;
+    
 }
-
 
 .items li img {
 	width: 100%;
@@ -243,7 +264,18 @@ body {
 .items .item {
 	position: relative;
 	display: block;
-	overflow: hidden;
+    overflow: hidden;
+    border: 3px solid white;
+    box-shadow: 0 6px 12px 0 rgba(134, 122, 122, 0.4);
+    margin: 20px;
+}
+
+.subject{
+    background-color: white;
+    color: #5e003e;
+    font-size: 14px;
+    padding-left: 5px;
+    font-weight: bold;
 }
 
 .items .icons {
@@ -325,6 +357,8 @@ body {
     background-color: #5e003e;
     color: #fff;
     padding: 30px 5px;
+    font-family: 'Jura', sans-serif;
+    font-weight: bold;
 }
 
 .copyrightSection p{
@@ -332,10 +366,15 @@ body {
 }
 
 #navigation{
+    position: -webkit-sticky;
+    position: sticky;
+    top:0;
     width: 100%;
     background-color: #5e003e;
     padding: 20px 10px;
     z-index: 100;   
+    font-family: 'Ubuntu Condensed', sans-serif;
+    font-size: 20px;
 }
 
 #navigation li{
@@ -380,3 +419,17 @@ body {
     background-color: white;
 }
 
+.fa, .fab{
+    color: #5e003e
+}
+
+#intro{
+    background-color: #5e003e;
+    margin-top: 20px;
+    color: white;
+    font-family: 'Jura', sans-serif;
+}
+
+.subHeading{
+    font-size: 20px;
+}
