--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,11 @@ body {
     margin-right: 20px;
 }
 
+.social:hover{
+    color:transparent;
+    text-decoration: none;
+}
+
 .contactSection{
     padding: 70px 0;
     font-family: 'Ubuntu Condensed', sans-serif;
@@ -409,7 +414,7 @@ body {
 .loader .inner{
     width: 100%;
     height: 100%;
-    background: url(../img/icons/loader.gif) center center no-repeat;
+    background: url(../img/icons/loader.svg) center center no-repeat;
 }
 
 .items #subject{
