Resume link attached.

--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,7 @@ body {
     padding: 15px 20px;
     display: inline-block;
     margin-top: 20px;
+    margin-left: 15PX;
     border: 1px solid #5e003e;
     border-radius: 2px;
     font-weight: bold;
