--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  font-size: 14px;
+  letter-spacing: 1px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -16,7 +18,7 @@ html {
 
 #root {
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 /* code {
@@ -24,7 +26,7 @@ html {
     monospace;
 } */
 
-/* Navigation styling */
+/* Navigation styling--------------------------------------->*/
 .navigation{
   width: 100%;
   background:#7e002b;
@@ -47,7 +49,7 @@ html {
   color: yellow;
 }
 
-/*Welcome page style */
+/*Welcome page style--------------------------------------------->*/
 .content {
   text-align: center;
   padding-top: 22%;
@@ -74,12 +76,42 @@ h1{
   font-weight: 700;
   font-size: 4em;
   font-family: 'Jura', sans-serif;
-  
+}
+
+/* About page styling--------------------------------->*/
+
+.usp{
+  font-family: 'Ubuntu Mono', monospace;
+  font-size: 1.7em;
 }
 
 .intro{
-  font-family: 'Ubuntu Mono', monospace;
-  font-size: 1.7em;
+  background-color: #5e003e;
+  margin-top: 20px;
+  color: white;
+  font-family: 'Jura', sans-serif;
+}
 
+.card{
+  box-shadow: 0 6px 12px 0 #5e003e;
+  transition: 0.3s;
+  padding-left: 0;
+  padding-right:0;
+  /*border-radius: 15px;*/
+}
+
+.avatar {
+  max-width: 100%;
+  /*border-radius: 15px 15px 0 0;*/
+}
+
+.myName{
+  padding-left: 10px;
+  margin-top: 50px;
+
+}
+
+.textColor{
+  color: #5e003e;
 }
 
