--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-size: 14px;
+  font-size: 15px;
   letter-spacing: 1px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -19,6 +19,16 @@ html {
 #root {
   height: 100%;
   /* overflow: hidden; */
+}
+
+.section {
+	padding: 50px 0;
+}
+
+.section .heading {
+	text-align: center;
+	padding-bottom: 10px;
+	width: 100%;
 }
 
 /* code {
@@ -61,7 +71,7 @@ html {
   background: url('./Assets/welcome.jpg');
   background-size: cover;
   background-position: center;
-  height: 92%;
+  height: 89.5%;
   opacity: 0.9;
 }
 
@@ -78,15 +88,16 @@ h1{
   font-family: 'Jura', sans-serif;
 }
 
-/* About page styling--------------------------------->*/
-
 .usp{
   font-family: 'Ubuntu Mono', monospace;
   font-size: 1.7em;
 }
 
+/* About page styling--------------------------------->*/
+
 .intro{
   background-color: #5e003e;
+  margin-left: 30px;
   margin-top: 20px;
   color: white;
   font-family: 'Jura', sans-serif;
@@ -94,6 +105,7 @@ h1{
 
 .card{
   box-shadow: 0 6px 12px 0 #5e003e;
+  border: 0;
   transition: 0.3s;
   padding-left: 0;
   padding-right:0;
@@ -102,21 +114,15 @@ h1{
 
 .avatar {
   max-width: 100%;
-  /*border-radius: 15px 15px 0 0;*/
-}
-
-.myName{
-  padding-left: 10px;
-  margin-top: 50px;
-
 }
 
 .textColor{
   color: #5e003e;
+  margin-left: 30px;
 }
 
 /*About page children styling---------------------------------->*/
-.childCards-enter {
+/* .childCards-enter {
   opacity: 0;
   transform: translate(20px);
 }
@@ -125,7 +131,7 @@ h1{
   transform: translateX(0);
   transition: opacity 300ms, transform 300ms;
 }
-/* .childCards-exit {
+.childCards-exit {
   opacity: 1;
 }
 .childCards-exit-active {
