--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@ html {
 #root {
   height: 100%;
   /* overflow: hidden; */
+  background: #EB3349;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #F45C43, #EB3349);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #F45C43, #EB3349); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .section {
@@ -31,6 +35,44 @@ html {
 	width: 100%;
 }
 
+.resumeBtn {
+	-moz-box-shadow: 0px 10px 18px 1px #0d1c05;
+	-webkit-box-shadow: 0px 10px 18px 1px #0d1c05;
+	box-shadow: 0px 10px 18px 1px #0d1c05;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #89e05a), color-stop(1, #44911a));
+	background:-moz-linear-gradient(top, #89e05a 5%, #44911a 100%);
+	background:-webkit-linear-gradient(top, #89e05a 5%, #44911a 100%);
+	background:-o-linear-gradient(top, #89e05a 5%, #44911a 100%);
+	background:-ms-linear-gradient(top, #89e05a 5%, #44911a 100%);
+	background:linear-gradient(to bottom, #89e05a 5%, #44911a 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#89e05a', endColorstr='#44911a',GradientType=0);
+	background-color:#89e05a;
+	-moz-border-radius:26px;
+	-webkit-border-radius:26px;
+	border-radius:26px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:15px 30px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #000000;
+}
+.resumeBtn:hover {
+	cursor:pointer;
+	color:#ffffff;
+  text-decoration:none;
+	text-shadow:0px 1px 0px #000000;
+}
+.resumeBtn:active {
+	position:relative;
+	top:2px;
+}
+
+
+
 /* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -39,7 +81,10 @@ html {
 /* Navigation styling--------------------------------------->*/
 .navigation{
   width: 100%;
-  background:#7e002b;
+  background: #EB3349;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #F45C43, #EB3349);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #F45C43, #EB3349); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .navigation .text-design,
@@ -65,14 +110,6 @@ html {
   padding-top: 22%;
   letter-spacing: 8px;
   text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
-}
-
-.welcome {
-  background: url('./Assets/welcome.jpg');
-  background-size: cover;
-  background-position: center;
-  height: 89.5%;
-  opacity: 0.9;
 }
 
 h1, .intro{
