--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,6 @@ body {
   height: 100%;
   font-size: 15px;
   letter-spacing: 1px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -53,10 +50,9 @@ html {
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
-	font-size:20px;
-	font-weight:bold;
-	padding:15px 30px;
+	font-family:'Jua', sans-serif;
+	font-size:15px;
+	padding:10px 15px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #000000;
 }
@@ -72,44 +68,46 @@ html {
 }
 
 
-
-/* code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-} */
-
 /* Navigation styling--------------------------------------->*/
 .navigation{
   width: 100%;
+  font-family: 'Jua', sans-serif;
+  font-size: 1.4rem;
   background: #EB3349;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #F45C43, #EB3349);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #F45C43, #EB3349); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
 }
 
-.navigation .text-design,
-.navigation .justify-content-end .text-design{
+.navigation a {
+  padding: 10px 20px;
   color: white;
-  padding: 10px 20px; 
-  font-family: 'Ubuntu Condensed', sans-serif;
+  letter-spacing: 3px;
+  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
 }
 
-.navigation .text-design:hover,
-.navigation .text-design:hover{
-  color: white;
+.navigation a:hover {
+  text-decoration: none;
 }
 
-.navigation .text-design:focus,
-.navigation .mr-auto .text-design:focus{
-  color: yellow;
-}
+.navigation a:focus {
+  font-size: 1.9rem;
+} 
 
 /*Welcome page style--------------------------------------------->*/
 .content {
+  position: relative;
+  margin-top: 15px;
+  top: 50%;
   text-align: center;
-  padding-top: 22%;
-  letter-spacing: 8px;
   text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+.content::before {
+  color: white;
+  content: "I'm";
+  font-size: 1.5rem;
+  font-family: 'Jua', sans-serif;
+  letter-spacing: 4px;
 }
 
 h1, .intro{
@@ -117,17 +115,62 @@ h1, .intro{
   text-shadow: 0px 4px 2px rgba(0,0,0,0.4),
                0px 8px 13px rgba(0,0,0,0.2),
                0px 18px 23px rgba(0,0,0,0.1);
+  letter-spacing: 8px;
 }
 
 h1{
   font-weight: 700;
   font-size: 4em;
-  font-family: 'Jura', sans-serif;
+  font-family: 'Jua', sans-serif;
 }
 
 .usp{
   font-family: 'Ubuntu Mono', monospace;
   font-size: 1.7em;
+  letter-spacing: 6px;
+}
+
+.time {
+  position: relative;
+  padding: 15px 0;
+  margin: 0 auto;
+  width: 60%;
+  top: 40%;
+  font-size: 1.2rem;
+  letter-spacing: 5px;
+  text-align: center;
+  font-family: 'Jua', sans-serif;
+  color: white;
+  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0px 10px 18px 1px #0d1c05;
+	-webkit-box-shadow: 0px 10px 18px 1px #0d1c05;
+  box-shadow: 0px 10px 18px 1px #0d1c05;
+  border-radius: 10px;
+
+}
+
+.morning{
+  background-color: #FEE140;
+  background-image: linear-gradient(180deg, #FEE140 0%, #FA709A 100%);
+}
+
+.noon {
+  background-color: #FBAB7E;
+  background-image: linear-gradient(180deg, #FBAB7E 0%, #F7CE68 100%);
+}
+
+.evening {
+  background: #ff7e5f;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(180deg, #feb47b, #ff7e5f);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(180deg, #feb47b, #ff7e5f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.night {
+  background: #0F2027;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 /* About page styling--------------------------------->*/
