--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,20 @@ body {
   letter-spacing: 1px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 480px) {
+  body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-size: 15px;
+    letter-spacing: 1px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    overflow: scroll;
+  }
 }
 
 html {
@@ -15,16 +29,15 @@ html {
 
 #root {
   height: 100%;
-  /* overflow: hidden; */
   background: #EB3349;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #F45C43, #EB3349);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #F45C43, #EB3349); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
 
-.section {
+/* .section {
 	padding: 50px 0;
-}
+} */
 
 .section .heading {
 	text-align: center;
@@ -96,7 +109,6 @@ html {
 /*Welcome page style--------------------------------------------->*/
 .content {
   position: relative;
-  margin-top: 15px;
   top: 50%;
   text-align: center;
   text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
@@ -184,16 +196,16 @@ h1{
 }
 
 .card{
-  box-shadow: 0 6px 12px 0 #5e003e;
+  box-shadow: 0px 10px 18px 1px #0d1c05;
   border: 0;
-  transition: 0.3s;
   padding-left: 0;
   padding-right:0;
-  /*border-radius: 15px;*/
+  border-radius: 20px;
 }
 
 .avatar {
   max-width: 100%;
+  border-radius: inherit;
 }
 
 .textColor{
@@ -202,15 +214,16 @@ h1{
 }
 
 /* Routing animation ------------------------------------->*/
-
+/* 
 .container {
   position: relative;
-}
+} */
 
 .page {
   position: absolute;
   left: 15px;
   right: 15px;
+  padding: 80px 0 50px 0;
 }
 
 .page-enter {
@@ -237,22 +250,33 @@ h1{
 
 
 /*About page children styling---------------------------------->*/
-/* .childCards-enter {
+
+.renderAbout {
+  width: 100%;
+  height: 100%;
+}
+
+.renderAbout-enter {
   opacity: 0;
-  transform: translate(20px);
 }
-.childCards-enter-active {
+.renderAbout-enter-active {
   opacity: 1;
-  transform: translateX(0);
-  transition: opacity 300ms, transform 300ms;
+  transition: opacity 900ms
 }
-.childCards-exit {
-  opacity: 1;
-}
-.childCards-exit-active {
+.renderAbout-exit {
   opacity: 0;
-  transform: scale(0.9);
-  transition: opacity 300ms, transform 300ms;
-} */
+}
+.renderAbout-exit-active {
+  opacity: 1;
+  transition: opacity 900ms
+}
+
+.toggleChildBtn {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  position: relative;
+  bottom: 50px;
+}
 
 
