--- a/src/index.css
+++ b/src/index.css
@@ -39,11 +39,11 @@ html {
 	padding: 50px 0;
 } */
 
-.section .heading {
+/* .section .heading {
 	text-align: center;
 	padding-bottom: 10px;
 	width: 100%;
-}
+} */
 
 .resumeBtn {
 	-moz-box-shadow: 0px 10px 18px 1px #0d1c05;
@@ -122,15 +122,12 @@ html {
   letter-spacing: 4px;
 }
 
-h1, .intro{
+h1 {
   color:white;
   text-shadow: 0px 4px 2px rgba(0,0,0,0.4),
                0px 8px 13px rgba(0,0,0,0.2),
                0px 18px 23px rgba(0,0,0,0.1);
   letter-spacing: 8px;
-}
-
-h1{
   font-weight: 700;
   font-size: 4em;
   font-family: 'Jua', sans-serif;
@@ -146,8 +143,8 @@ h1{
   position: relative;
   padding: 15px 0;
   margin: 0 auto;
-  width: 60%;
-  top: 40%;
+  width: 45%;
+  top: 20%;
   font-size: 1.2rem;
   letter-spacing: 5px;
   text-align: center;
@@ -188,11 +185,16 @@ h1{
 /* About page styling--------------------------------->*/
 
 .intro{
-  background-color: #5e003e;
-  margin-left: 30px;
-  margin-top: 20px;
+  background-color: #EB3349;
+  background: -webkit-linear-gradient(to right, #F45C43, #EB3349);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #F45C43, #EB3349); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  margin: 20px;
   color: white;
-  font-family: 'Jura', sans-serif;
+  text-align: center;
+  border-radius: 15px;
+  font-family: 'Jua', sans-serif;
+  box-shadow: 2px 8px 4px 0px #0d1c05;
+  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
 }
 
 .card{
@@ -200,6 +202,8 @@ h1{
   border: 0;
   padding-left: 0;
   padding-right:0;
+  margin-top: 10px;
+  margin-bottom: 10px;
   border-radius: 20px;
 }
 
@@ -214,10 +218,6 @@ h1{
 }
 
 /* Routing animation ------------------------------------->*/
-/* 
-.container {
-  position: relative;
-} */
 
 .page {
   position: absolute;
@@ -256,6 +256,13 @@ h1{
   height: 100%;
 }
 
+@media screen and (max-width: 480px){
+  .renderAbout {
+    width: 100%;
+    height: 20em;
+  }
+}
+
 .renderAbout-enter {
   opacity: 0;
 }
@@ -272,11 +279,50 @@ h1{
 }
 
 .toggleChildBtn {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
+  text-align: center;
   position: relative;
-  bottom: 50px;
+  bottom: 25px;
 }
+
+.toggleChildBtn button {
+  background-color: #EB3349;
+  background: -webkit-linear-gradient(to right, #F45C43, #EB3349);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #F45C43, #EB3349);
+  color: white;
+  text-align: center;
+  width: 5rem;
+  height: 3rem;
+  font-size: 1.2rem;
+  border-color: transparent;
+  font-family: 'Jua', sans-serif;
+  box-shadow: 0px 4px 3px 2px #0d1c05;
+  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+.nextBtn {
+  border-radius: 0 15px 15px 0;
+  margin-left: 1px;
+}
+
+.prevBtn {
+  border-radius: 15px 0 0 15px;
+  margin-right: 1px;
+}
+
+.toggleChildBtn button:hover {
+  border-color: transparent;
+}
+
+.toggleChildBtn button:active, .toggleChildBtn button:focus {
+  border-color: transparent;
+  outline: 0;
+  background-color: #EB3349;
+}
+
+.toggleChildBtn button:active {
+  position: relative;
+  top: 1px;
+}
+
 
 
