--- a/src/Screens/Stats/Stats.css
+++ b/src/Screens/Stats/Stats.css
@@ -1,63 +1,98 @@
+.statsContainer {
+	padding-top: 70px;
+}
+
+.statsCard {
+	-moz-box-shadow: 0px 10px 18px 1px #0d1c05;
+	-webkit-box-shadow: 0px 10px 18px 1px #0d1c05;
+	box-shadow: 5px 10px 18px 1px #0d1c05;
+	background:linear-gradient(135deg, #98db63 0%,#6fca74 100%);
+	border-radius: 15px;
+	border-color: transparent;
+}
+
 .squareItem {
 	margin-top: 30px;
     position: relative;
 }
 
 .squareInnerContainer {
-	position: relative;
 	padding: 50px 15px 35px;
 	text-align: center;
-	border: 2px solid #444;
-	border-top: none;
 }
 
-.squareInnerContainer:before,
-.squareInnerContainer:after {
-	content: '';
-	position: absolute;
-	top: 0px;
-	width: 30%;
-	border-bottom: 2px solid #444;
-}
-
-
-.squareInnerContainer:before {
-	right: 0px;
-}
-
-.squareInnerContainer:after {
-	left: 0px
-}
-
-
-.squareContent h2 {
-	font-size: 56px;
-	margin-bottom: 10px;
-	font-weight: 400;
-	color: #5e003e;
-}
-
-.squareContent h3 {
-	font-size: 13px;
+.squareInnerContainer h2 {
+	font-size: 5rem;
+	margin-bottom: 25px;
+	visibility: hidden;
 	font-weight: 600;
+	text-shadow: 2px 5px 8px rgba(0, 0, 0, 1);
+	color: #eb3548;
+}
+
+.animateValue {
+	animation-name: valueAppear;
+	animation-duration: 0.4s;
+	animation-fill-mode: forwards;
+}
+
+@keyframes valueAppear {
+	from { transform: scale(0); visibility: hidden;}
+	to { transform: scale(1); visibility: visible;}
+}
+
+.squareInnerContainer h3 {
+	font-size: 1.2rem;
+	font-weight: 700;
+	text-shadow: 1px 8px 4px rgba(0, 0, 0, 0.2);
     margin: 0;
-    color: #5e003e;
+	color: #eb3548;
 }
 
 .squareIcon {
 	position: absolute;
-    left: 50%;
-    top: -30px;
-    width: 40%;
-    height: 60px;
-    font-size: 45px;
-    margin-left: -20%;
-    color: #444;
+	background-color: #EB3349;
+	right: 40%;
+	font-size: 65px;
+	border-radius: 50%;
+	padding: 3px;
+	box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.4);
+	cursor: pointer;
 }
 
-.company img{
-	width: 80%;
-	height: 80%;
-	object-fit: contain;
-	overflow: hidden;
+.animateIcon {
+	animation-name: iconMove;
+	animation-fill-mode: forwards;
+	animation-duration: 0.2s;
+}
+
+@keyframes iconMove {
+	from{ transform: translate(0px, 0px); }
+	to{ 
+		transform: translate(-150%, -90%) scale(0.55);
+	}
+}
+
+.employerSection {
+	position: relative;
+	top: 120px;
+	text-align: center;
+	padding-bottom: 15px;
+	background-color: white;
+	box-shadow: 5px -10px 18px 1px #0d1c05;
+	border-radius: 15px 15px 0 0;
+}
+
+.employerSection h2 {
+	line-height: 105px;
+	font-weight: 600;
+	font-size: 2.5rem;
+	text-shadow: 1px 8px 4px rgba(0, 0, 0, 0.2);
+	color: #eb3548;
+	font-family: 'Jua', sans-serif;
+	letter-spacing: 5px;
+}
+
+.employerSection img {
+	line-height: 105px;
 }
