--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   overflow: hidden;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   body {
     margin: 0;
     padding: 0;
@@ -49,13 +49,13 @@ html {
 	-moz-box-shadow: 0px 10px 18px 1px #0d1c05;
 	-webkit-box-shadow: 0px 10px 18px 1px #0d1c05;
 	box-shadow: 0px 10px 18px 1px #0d1c05;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #89e05a), color-stop(1, #44911a));
-	background:-moz-linear-gradient(top, #89e05a 5%, #44911a 100%);
-	background:-webkit-linear-gradient(top, #89e05a 5%, #44911a 100%);
-	background:-o-linear-gradient(top, #89e05a 5%, #44911a 100%);
-	background:-ms-linear-gradient(top, #89e05a 5%, #44911a 100%);
-	background:linear-gradient(to bottom, #89e05a 5%, #44911a 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#89e05a', endColorstr='#44911a',GradientType=0);
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #89e05a), color-stop(1, #7dff37));
+	background:-moz-linear-gradient(top, #89e05a 5%, #7dff37 100%);
+	background:-webkit-linear-gradient(top, #89e05a 5%, #7dff37 100%);
+	background:-o-linear-gradient(top, #89e05a 5%, #7dff37 100%);
+	background:-ms-linear-gradient(top, #89e05a 5%, #7dff37 100%);
+	background:linear-gradient(to bottom, #89e05a 5%, #7dff37 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#89e05a', endColorstr='#7dff37',GradientType=0);
 	background-color:#89e05a;
 	-moz-border-radius:26px;
 	-webkit-border-radius:26px;
@@ -297,6 +297,7 @@ h1 {
   font-family: 'Jua', sans-serif;
   box-shadow: 0px 4px 3px 2px #0d1c05;
   text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
 }
 
 .nextBtn {
