--- a/src/Screens/Portfolio/Portfolio.css
+++ b/src/Screens/Portfolio/Portfolio.css
@@ -1,13 +1,13 @@
 .sticky-l, .sticky-r {
     z-index: 150;
-    max-width: 30%;
+    max-width: 20%;
     min-height: 150px;
-    margin: -10px 10px 10px;
+    margin: 20px;
     padding: 10px;
     font-family: "Gloria Hallelujah", "Comic Sans", "Chalkboard SE", "Comic Neue", cursive;
-    font-size: 14px;
+    font-size: 1rem;
     color: #000;
-    box-shadow: -2px 2px 2px rgba(0,0,0,0.3);
+    box-shadow: -2px 10px 4px rgba(0,0,0,0.3);
     cursor: pointer;
   }
 
@@ -19,24 +19,94 @@
     transform: rotate(5deg);
   }
 
-  .sticky-l:before, .sticky-l:after, .sticky-r:before, .sticky-r:after {
-    content: "";
+  .stickyTitle {
+    border-bottom: 1px solid white;
+    padding-bottom: 8px;
+  }
+
+  .sticky-image {
+    max-width: 90%;
+    height: auto;
     display: block;
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    top: 0;
-    right: 0;
+    margin: 0 auto;
   }
-  .sticky-l:before, .sticky-r:before {
-    border-top: solid 8px #fff;
-    border-right: solid 8px #fff;
-    border-left: solid 8px transparent;
-    border-bottom: solid 8px transparent;
+
+  .toggleBtn {
+    text-align: center;
   }
-  .sticky-l:after, .sticky-r:after {
-    border-bottom: solid 8px #dddd33;
-    border-left: solid 8px #dddd33;
-    border-right: solid 8px transparent;
-    border-top: solid 8px transparent;
+  
+  .toggleBtn button {
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
+	background:-moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
+	background:-webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
+	background:-o-linear-gradient(top, #599bb3 5%, #408c99 100%);
+	background:-ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
+	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99',GradientType=0);
+	background-color:#599bb3;
+          
+    color: white;
+    text-align: center;
+    width: 5rem;
+    height: 3rem;
+    font-size: 1.2rem;
+    border-color: transparent;
+    font-family: 'Jua', sans-serif;
+    box-shadow: 0px 4px 3px 2px #0d1c05;
+    text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
+    cursor: pointer;
+  }
+  
+  .webBtn {
+    border-radius: 0 15px 15px 0;
+    margin-left: 1px;
+  }
+
+  .androidBtn {
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+  
+  .allBtn {
+    border-radius: 15px 0 0 15px;
+    margin-right: 1px;
+  }
+  
+  .toggleBtn button:hover {
+    border-color: transparent;
+  }
+  
+  .toggleBtn button:active, .toggleBtn button:focus {
+    border-color: transparent;
+    outline: 0;
+    background-color: #EB3349;
+  }
+  
+  .toggleBtn button:active {
+    position: relative;
+    top: 1px;
+  }
+
+  .portfolioSection, .portfolioStickySection {
+    position: relative;
+    top: 30px;
+  }
+
+  .portfolioStickySection {
+    padding-left: 10%;
+  }
+
+  .modal-body svg {
+    font-size: 1.4rem;
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+
+  .modal-title:hover{
+    background-color: #EB3349;
+    padding: 0 5px;
+    border-radius: 5px;
+    color: white;
+    transition: 0.2s;
+    cursor: pointer;
   }
