--- a/src/Screens/Stats/Stats.css
+++ b/src/Screens/Stats/Stats.css
@@ -51,12 +51,13 @@
 
 .squareIcon {
 	position: absolute;
-	background-color: #EB3349;
+	color: white;
+	background-color: #eb3548;
 	right: 40%;
-	font-size: 65px;
+	font-size: 70px;
 	border-radius: 50%;
 	padding: 3px;
-	box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.4);
+	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
 	cursor: pointer;
 }
 
