PR-8: handled shrinking of nav items

--- a/src/index.css
+++ b/src/index.css
@@ -95,10 +95,10 @@ html {
 }
 
 .navigation a:hover {
-  text-decoration: none;
+  text-decoration: none;  
 }
 
-.navigation a:focus {
+.active {
   font-size: 1.8rem;
 }
 
