PR-3: fixing PR-13 as a part of this ticket. PR-13 is a subtask of PR-3

--- a/src/Screens/Stats/Stats.css
+++ b/src/Screens/Stats/Stats.css
@@ -65,6 +65,7 @@
 	animation-name: iconMove;
 	animation-fill-mode: forwards;
 	animation-duration: 0.2s;
+	cursor: default;
 }
 
 @keyframes iconMove {
