--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/*App level styling*/
+/*App level styling--------------------------------------->*/
 body {
   margin: 0;
   padding: 0;
@@ -33,58 +33,24 @@ html {
   background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
 }
 
-/* .section {
-	padding: 50px 0;
-} */
-
-/* .section .heading {
-	text-align: center;
-	padding-bottom: 10px;
-	width: 100%;
-} */
-
-.resumeBtn {
-	-moz-box-shadow: 0px 10px 18px 1px #0d1c05;
-	-webkit-box-shadow: 0px 10px 18px 1px #0d1c05;
-	box-shadow: 0px 10px 18px 1px #0d1c05;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #89e05a), color-stop(1, #7dff37));
-	background:-moz-linear-gradient(top, #89e05a 5%, #7dff37 100%);
-	background:-webkit-linear-gradient(top, #89e05a 5%, #7dff37 100%);
-	background:-o-linear-gradient(top, #89e05a 5%, #7dff37 100%);
-	background:-ms-linear-gradient(top, #89e05a 5%, #7dff37 100%);
-	background:linear-gradient(to bottom, #89e05a 5%, #7dff37 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#89e05a', endColorstr='#7dff37',GradientType=0);
-	background-color:#89e05a;
-	-moz-border-radius:26px;
-	-webkit-border-radius:26px;
-	border-radius:26px;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:'Jua', sans-serif;
-	font-size:15px;
-	padding:10px 15px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #000000;
-}
-.resumeBtn:hover {
-	cursor:pointer;
-	color:#ffffff;
-  text-decoration:none;
-	text-shadow:0px 1px 0px #000000;
-}
-.resumeBtn:active {
-	position:relative;
-	top:2px;
-}
-
-
 /* Navigation styling--------------------------------------->*/
 .navigation{
   width: 100%;
   font-family: 'Jua', sans-serif;
   font-size: 1.4rem;
   background-image: linear-gradient(180deg, #24eaa4 0%, #24eaa4 100%);
+}
+
+.navigation-expand-bg {
+  background-image: linear-gradient(180deg, #19d1c0 0%, #19d1c0 100%);
+}
+
+.navigation button:focus {
+  outline: none;
+}
+
+.navbar-light .navbar-toggler {
+  border-color: transparent;
 }
 
 .navigation a {
@@ -98,7 +64,22 @@ html {
   text-decoration: none;  
 }
 
-.active {
+/* Overrided value */
+.navigation .navbar-toggler-icon {
+  background: url('https://api.iconify.design/jam:menu.svg?color=white') no-repeat center center/2.5rem;
+}
+
+.rotate-burger {
+  transform: rotate(90deg);
+  transition-duration: 0.5s;
+}
+
+.original-burger {
+  transform: rotate(0deg);
+  transition-duration: 0.5s;
+}
+
+.active-nav-item {
   font-size: 1.8rem;
 }
 
@@ -116,6 +97,12 @@ html {
   font-size: 1.5rem;
   font-family: 'Jua', sans-serif;
   letter-spacing: 4px;
+}
+
+
+.blurred-bg {
+  filter: blur(5px);
+  transition-duration: 0.5s;
 }
 
 h1 {
@@ -193,6 +180,41 @@ h1 {
   border-color: #2c3e50;
   color: #2c3e50;
   text-shadow: 0px 4px 4px rgba(100, 100, 100, 0.5);
+}
+
+.resumeBtn {
+	-moz-box-shadow: 0px 10px 18px 1px #0d1c05;
+	-webkit-box-shadow: 0px 10px 18px 1px #0d1c05;
+	box-shadow: 0px 10px 18px 1px #0d1c05;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #89e05a), color-stop(1, #7dff37));
+	background:-moz-linear-gradient(top, #89e05a 5%, #7dff37 100%);
+	background:-webkit-linear-gradient(top, #89e05a 5%, #7dff37 100%);
+	background:-o-linear-gradient(top, #89e05a 5%, #7dff37 100%);
+	background:-ms-linear-gradient(top, #89e05a 5%, #7dff37 100%);
+	background:linear-gradient(to bottom, #89e05a 5%, #7dff37 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#89e05a', endColorstr='#7dff37',GradientType=0);
+	background-color:#89e05a;
+	-moz-border-radius:26px;
+	-webkit-border-radius:26px;
+	border-radius:26px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:'Jua', sans-serif;
+	font-size:15px;
+	padding:10px 15px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #000000;
+}
+.resumeBtn:hover {
+	cursor:pointer;
+	color:#ffffff;
+  text-decoration:none;
+	text-shadow:0px 1px 0px #000000;
+}
+.resumeBtn:active {
+	position:relative;
+	top:2px;
 }
 
 /* About page styling--------------------------------->*/
