--- a/src/Screens/Portfolio/Portfolio.css
+++ b/src/Screens/Portfolio/Portfolio.css
@@ -1,10 +1,10 @@
 .sticky-l, .sticky-r {
     z-index: 150;
     max-width: 20%;
-    min-height: 150px;
-    margin: 20px;
-    padding: 10px;
-    font-family: "Gloria Hallelujah", "Comic Sans", "Chalkboard SE", "Comic Neue", cursive;
+    max-height: 170px;
+    margin: 15px;
+    padding: 5px;
+    font-family: 'Jua', sans-serif;
     font-size: 1rem;
     color: #000;
     box-shadow: -2px 10px 4px rgba(0,0,0,0.3);
@@ -36,15 +36,7 @@
   }
   
   .toggleBtn button {
-    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
-	background:-moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:-webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:-o-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:-ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99',GradientType=0);
-	background-color:#599bb3;
-          
+    background-color:#e65a41;   
     color: white;
     text-align: center;
     width: 5rem;
