--- a/src/Screens/About/About.css
+++ b/src/Screens/About/About.css
@@ -31,6 +31,23 @@
     margin-left: 30px;
   }
 
+  .prevBtn, .nextBtn {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 800;
+    cursor: pointer;
+    position: absolute;
+    top: 25px;
+  }
+
+  .prevBtn {
+    left: 30px;
+  }
+
+  .nextBtn {
+    right: 30px;
+  }
+
   /*About page children styling---------------------------------->*/
 
 .renderAbout {
@@ -38,10 +55,10 @@
   height: 100%;
 }
 
-@media screen and (max-width: 480px){
+@media screen and (max-width: 428px){
   .renderAbout {
     width: 100%;
-    height: 20em;
+    height: 545px;
   }
 }
 
