--- a/src/Screens/Welcome/Welcome.css
+++ b/src/Screens/Welcome/Welcome.css
@@ -31,19 +31,20 @@ h1 {
 }
 
 .usp{
-  font-family: 'Ubuntu Mono', monospace;
-  font-size: 1.7em;
+  color: white;
+  font-size: 1.3rem;
   letter-spacing: 6px;
 }
 
 .greetings {
-  border: 8px solid;
+  color: white;
+  font-family: 'Sofia', cursive;
   padding: 15px 15px 50px 15px;
   position: absolute;
   font-weight: 700;
-  top: 35px;
+  top: 45px;
   left: 50%;
-  margin-left: -140px;
+  margin-left: -120px;
   border-radius: 15px;
   box-shadow: 0px 4px 6px 0px #0d1c05;
 }
@@ -53,10 +54,10 @@ h1 {
   border-radius: 50%;
   left: 50%;
   margin-left: -1.8rem;
-  padding: 5px;
+  padding: 1px;
   top: 120px;
   border: none;
-  font-size: 55px;
+  font-size: 50px;
   animation: iconBlink 3.2s infinite;
 
 }
@@ -67,64 +68,47 @@ h1 {
 }
 
 @keyframes iconBlink {
-  from { box-shadow: 0px 4px 10px 2px #0d1c05; }
-  50% { box-shadow: 0px 4px 15px 4px #0d1c05; }
-  to { box-shadow: 0px 4px 10px 2px #0d1c05; }
+  from { box-shadow: 0px 1px 8px 2px #4bd421; }
+  50% { box-shadow: 0px 1px 12px 4px #4bd421; }
+  to { box-shadow: 0px 1px 8px 2px #4bd421; }
 }
 
 .morning{
-  border-color: #FF512F;  /* fallback for old browsers */
-  color: #FF512F;
+  background: #FF512F; 
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
 }
 
 .noon {
-  border-color: #F2994A;  /* fallback for old browsers */
-  color: #F2994A;
+  background: #F2994A; 
+
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
 }
 
 .evening {
-  border-color: #ff7e5f;
-  color: #ff7e5f;
+  background: #ff7e5f;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.9);
 }
 
 .night {
-  border-color: #2c3e50;
-  color: #2c3e50;
+  background: #2c3e50;
   text-shadow: 0px 4px 4px rgba(100, 100, 100, 0.5);
 }
 
 .resumeBtn {
-    -moz-box-shadow: 0px 10px 18px 1px #0d1c05;
-    -webkit-box-shadow: 0px 10px 18px 1px #0d1c05;
-    box-shadow: 0px 10px 18px 1px #0d1c05;
-    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #89e05a), color-stop(1, #7dff37));
-    background:-moz-linear-gradient(top, #89e05a 5%, #7dff37 100%);
-    background:-webkit-linear-gradient(top, #89e05a 5%, #7dff37 100%);
-    background:-o-linear-gradient(top, #89e05a 5%, #7dff37 100%);
-    background:-ms-linear-gradient(top, #89e05a 5%, #7dff37 100%);
-    background:linear-gradient(to bottom, #89e05a 5%, #7dff37 100%);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#89e05a', endColorstr='#7dff37',GradientType=0);
-    background-color:#89e05a;
-    -moz-border-radius:26px;
-    -webkit-border-radius:26px;
-    border-radius:26px;
-    display:inline-block;
-    cursor:pointer;
-    color:#ffffff;
-    font-family:'Jua', sans-serif;
-    font-size:15px;
-    padding:10px 15px;
-    text-decoration:none;
-    text-shadow:0px 1px 0px #000000;
+	box-shadow: 0px 10px 14px -7px #2a2b2a;
+	background-color:#e4685d;
+  border-radius:15px;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:'Jua', sans-serif;
+  font-size:1rem;
+  padding:10px 15px;
 }
 .resumeBtn:hover {
-    cursor:pointer;
-    color:#ffffff;
+  cursor: pointer;
   text-decoration:none;
-    text-shadow:0px 1px 0px #000000;
+  color:#ffffff;
 }
 .resumeBtn:active {
     position:relative;
