PR-7: Weather api implemented. Styling is pending

--- a/src/Screens/Welcome/Welcome.css
+++ b/src/Screens/Welcome/Welcome.css
@@ -53,12 +53,11 @@ h1 {
   position: absolute;
   border-radius: 50%;
   left: 50%;
-  margin-left: -1.8rem;
-  padding: 1px;
+  margin-left: -1.2rem;
   top: 120px;
   border: none;
   font-size: 50px;
-  animation: iconBlink 3.2s infinite;
+  animation: iconBlink 3s ease-in 0s infinite;
 
 }
 
@@ -68,29 +67,37 @@ h1 {
 }
 
 @keyframes iconBlink {
-  from { box-shadow: 0px 1px 8px 2px #4bd421; }
-  50% { box-shadow: 0px 1px 12px 4px #4bd421; }
-  to { box-shadow: 0px 1px 8px 2px #4bd421; }
+  from { box-shadow: 0px 0px 2px 1px #ff5c2b; }
+  50% { box-shadow: 0px 0px 10px 5px #e2400f; }
+  to { box-shadow: 0px 0px 2px 1px #ff5c2b; }
 }
 
 .morning{
-  background: #FF512F; 
+  background: #ff4b1f;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(180deg, #ff9068, #ff4b1f);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(180deg, #ff9068, #ff4b1f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
 }
 
 .noon {
-  background: #F2994A; 
-
+  background: #F2994A;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(0deg, #F2C94C, #F2994A);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(0deg, #F2C94C, #F2994A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
 }
 
 .evening {
-  background: #ff7e5f;
+  background: #0B486B;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(180deg, #F56217, #0B486B);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(180deg, #F56217, #0B486B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.9);
 }
 
 .night {
-  background: #2c3e50;
+  background: #2c3e50;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(0deg, #414345, #2c3e50);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(0deg, #414345, #2c3e50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   text-shadow: 0px 4px 4px rgba(100, 100, 100, 0.5);
 }
 
