--- a/src/Screens/Navigation/Navigation.css
+++ b/src/Screens/Navigation/Navigation.css
@@ -15,7 +15,7 @@
   
   .navigation a {
     padding: 10px 20px;
-    color: white;
+    color: #fffc50;
     letter-spacing: 3px;
     text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
   }
@@ -26,7 +26,7 @@
   
   /* Overrided value */
   .navigation .navbar-toggler-icon {
-    background: url('https://api.iconify.design/jam:menu.svg?color=white') no-repeat center center/2.5rem;
+    background: url('https://api.iconify.design/jam:menu.svg?color=yellow') no-repeat center center/2.5rem;
   }
   
   .rotate-burger {
