--- a/src/Screens/Welcome/Welcome.css
+++ b/src/Screens/Welcome/Welcome.css
@@ -102,8 +102,8 @@ h1 {
 }
 
 .resumeBtn {
-	box-shadow: 0px 10px 14px -7px #2a2b2a;
-	background-color:#e4685d;
+	box-shadow: 0px 5px 8px 3px #2a2b2a;
+	background-color:#ff5f50;
   border-radius:15px;
   display:inline-block;
   cursor:pointer;
