--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -4,6 +4,7 @@
 
 .post {
     margin: 1rem 0;
+    margin-right: 10px;
 
     a {
         background: #f4f4f4;
@@ -11,6 +12,7 @@
         display: block;
         padding: 1rem;
         text-decoration: none;
+        border-radius: 10px;
 
         &:hover{
             background: #e4e4e4;
