--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,36 @@
 #gatsby-focus-wrapper{
     background: tomato;
 }
+
+.hr-line {
+    border-bottom: 1px solid lightgrey;
+}
+
+@media screen and (max-width: 768px){
+    .margin-tp{
+        margin-top: 30px;
+    }
+}
+
+/* width */
+::-webkit-scrollbar {
+width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+box-shadow: inset 0 1px 5px rgb(226, 224, 219);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+background: tomato;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+background: #ee4d4d;
+}
 // html {
 //     font-family: sans-serif;
 //     -ms-text-size-adjust: 100%;
