desinged blog posts

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -17,3 +17,9 @@ a {
         color: white;
     }
 }
+
+.tomato{
+    color: tomato;
+    font-family: 'Bangers', cursive;
+    font-size: 2.5rem;
+}
