--- a/src/pages/contact.module.scss
+++ b/src/pages/contact.module.scss
@@ -7,3 +7,22 @@
     width: 0;
     z-index: -1;
 }
+
+.loader {
+    border: 4px solid tomato;
+    width: 40px;
+    height: 40px;
+    -webkit-animation: spin 3s linear infinite; /* Safari */
+    animation: spin 3s linear infinite;
+  }
+  
+//   /* Safari */
+//   @-webkit-keyframes spin {
+//     0% { -webkit-transform: rotate(0deg); }
+//     100% { -webkit-transform: rotate(360deg); }
+//   }
+  
+//   @keyframes spin {
+//     0% { transform: rotate(0deg); }
+//     100% { transform: rotate(360deg); }
+//   }
