--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,6 +32,25 @@ background: tomato;
 ::-webkit-scrollbar-thumb:hover {
 background: #ee4d4d;
 }
+
+.loader {
+    border: 4px solid tomato;
+    width: 40px;
+    height: 40px;
+    -webkit-animation: spin 3s linear infinite; /* Safari */
+    animation: spin 3s linear infinite;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 // html {
 //     font-family: sans-serif;
 //     -ms-text-size-adjust: 100%;
