--- a/src/templates/post.module.scss
+++ b/src/templates/post.module.scss
@@ -18,3 +18,10 @@ article>p{
     font-size: 1.2rem;
 }
 
+@media screen and (max-width: 768px){
+    .fluid-img{
+        max-width: 300px;
+        height: auto;
+    }
+}
+
