--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -1,22 +1,24 @@
-.ques{
-    list-style: none;
-    padding: 0;
-    > li{
-        padding: 5px;
-        font-size: 1rem;
-        margin: 10px 0;
-    }
+.p-body {
+    font-family: monospace;
+    opacity: 0.8;
 }
 
-.ans{
-    list-style: none;
-    padding: 0;
-    > li{
-        padding: 5px;
-        > span{
-            font-size: 1.8rem;
-        }
-    }
+.p-head{
+    font-family: sans-serif;
+    font-size: 1.1rem;
+}
+
+.resume{
+    vertical-align: top;
+    height: auto;
+    width: auto;
+    font-size: 1rem;
+    background-color: tomato;
+    border: 2px solid white;
+    color: white;
+    border-radius: 10px;
+    padding: 5px;
+    transition: all 0.2s linear 0s;
 }
 
 .custom-scroll{
