added favicon and few other minor fixes

--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -21,6 +21,10 @@
     transition: all 0.2s linear 0s;
 }
 
+.resume:focus{
+    outline: none;
+}
+
 .custom-scroll{
     overflow: auto;
     overflow-x: hidden;
