worked upon blog post rendering glitches on mobile devices

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -50,6 +50,7 @@ code {
   white-space: pre-wrap;
   font-family: monospace;
   background-color: #212529;
+  padding: 1rem;
   color: #96dfdf;
   border-radius: 10px;
 }
