--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,53 +18,54 @@ button:focus{
 
 /* width */
 ::-webkit-scrollbar {
-width: 10px;
+  width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-box-shadow: inset 0 1px 5px rgb(226, 224, 219);
+  box-shadow: inset 0 1px 5px rgb(226, 224, 219);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-background: tomato;
+  background: tomato;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-background: #ee4d4d;
-}
-
-.loader {
-    border: 4px solid tomato;
-    width: 40px;
-    height: 40px;
-    -webkit-animation: spin 3s linear infinite; /* Safari */
-    animation: spin 3s linear infinite;
+  background: #ee4d4d;
 }
 
 code {
   font-size: 1rem;
   display: block;
-  white-space: pre-wrap;
   font-family: monospace;
+  white-space: pre-wrap;
+  word-break: break-all;
   background-color: #212529;
   padding: 1rem;
   color: #96dfdf;
   border-radius: 10px;
 }
   
-  /* Safari */
-  @-webkit-keyframes spin {
-    0% { -webkit-transform: rotate(0deg); }
-    100% { -webkit-transform: rotate(360deg); }
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.loader {
+  border: 4px solid tomato;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 3s linear infinite; /* Safari */
+  animation: spin 3s linear infinite;
+}
 
 #disqus_thread{
   width: 82%;
