--- a/styles/components/NavMenu.module.scss
+++ b/styles/components/NavMenu.module.scss
@@ -9,6 +9,11 @@
 	display: flex;
 	padding: 0.5rem 1rem 0.5rem 0;
 	justify-content: space-between;
+    position: sticky;
+    top: 0;
+    box-shadow: 0px 1px 5px 0px black;
+    background-color: #343c44;
+	z-index: 99;
 }
 .navMenu {
 	display: flex;
