refactor: Badge and certification section on profile

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -55,6 +55,12 @@
 .posts{
     list-style-type: none;
     display: flex;
+    flex-direction: column;
+    padding: 0;
+}
+.repos {
+    list-style-type: none;
+    display: flex;
     padding: 0;
 }
 
