--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,9 +1,12 @@
-.agenda {
+.header {
     h1 {
         font-size: 2rem;
         margin-bottom: 1rem;
         color: var(--dark-gray);
     }
+}
+.projects {
+    display: flex;
 }
 .viewMore {
     text-align: center;
