--- a/styles/components/Common/Card.module.scss
+++ b/styles/components/Common/Card.module.scss
@@ -1,11 +1,11 @@
 .card {
-    margin-bottom: 1rem;
+    margin-bottom: 1.4rem;
     border-left: 3px solid var(--red);
     padding: 0.25rem 0.5rem 0 0.5rem;
-    opacity: 0.8;
     transition: all 0.2s ease-in-out;
     box-shadow: 2px 2px 4px 1px var(--red-shadow);
     cursor: pointer;
+    display: flex;
     h3 { 
         margin: 0 0 0.5rem 0;
     }
@@ -14,10 +14,54 @@
     }
     small {
         font-size: 0.7rem;
-        opacity: 0.7;
     }
     &:hover {
         background-color: var(--red-hover);
-        opacity: 1;
+        .extLink {
+            display: block !important;
+        }
     }
+}
+.cardBody {
+    display: flex;
+    flex-direction: column;
+    width: -webkit-fill-available;
+    summary {
+        margin-top: 0.5rem;
+    }
+}
+.cardTitle {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    div {
+        h3 {
+            margin: 0;
+            margin-right: 0.5rem;
+        }
+        display: flex;
+        align-items: center;
+    }
+}
+.cardImage {
+    width: 80px;
+    min-height: 80px;
+    margin: 0 1rem 0 0;
+    display: flex;
+    align-items: center;
+}
+.extLink {
+    display: none !important;
+}
+.tag {
+    font-size: 0.6rem;
+    font-family: monospace;
+    color: white;
+    background-color: var(--red);
+    border-radius: 5px;
+    padding: 0.3rem;
+    margin-right: 0.25rem;
+}
+.tagGroup {
+    padding-bottom: 0.5rem;
 }
