--- a/styles/components/NavMenu.module.scss
+++ b/styles/components/NavMenu.module.scss
@@ -12,9 +12,9 @@
     position: sticky;
     top: 0;
     box-shadow: 0px 1px 5px 0px black;
-    background-color: #343c44;
-	z-index: 99;
+	background: var(--dark-gray);
 	margin-bottom: 3rem;
+	z-index: 99;
 }
 .navMenu {
 	display: flex;
