--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,6 +2,7 @@
 
 :root {
   --dark-gray: hsl(210, 13%, 24%);
+  --gray: hsl(212, 6%, 42%);
   --red: hsl(10, 91%, 62%);
   --red-hover: hsl(15, 100%, 98%);
   --red-shadow: hsl(0, 13%, 72%, 30%);
