--- a/styles/components/GithubCard.module.scss
+++ b/styles/components/GithubCard.module.scss
@@ -6,8 +6,8 @@
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    min-width: 300px;
-    width: 300px;
+    width: 320px;
+    min-width: 320px;
     max-height: 300px;
     height: 300px;
     header {
@@ -59,4 +59,7 @@
     display: flex;
     height: 100%;
     align-items: flex-end;
+}
+.githubCardBody {
+    height: 100%;
 }
