--- a/styles/components/Project/RepoList.module.scss
+++ b/styles/components/Project/RepoList.module.scss
@@ -1,10 +1,8 @@
-.projects {
-    display: flex;
-}
 .githubRepos {
     display: grid;
     row-gap: 2rem;
-    column-gap: 1rem;
+    column-gap: 2rem;
     justify-items: center;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    margin-bottom: 1rem;
 }
