--- a/styles/components/Common/Card.module.scss
+++ b/styles/components/Common/Card.module.scss
@@ -1,7 +1,7 @@
 .card {
     margin-bottom: 1.4rem;
     border-left: 3px solid var(--red);
-    padding: 0.25rem 0.5rem 0 0.5rem;
+    padding: 0.5rem;
     transition: all 0.2s ease-in-out;
     box-shadow: 2px 2px 4px 1px var(--red-shadow);
     cursor: pointer;
