--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,8 +21,12 @@ a {
   color: inherit;
   text-decoration: none;
 }
+h2, h3 {
+  color: var(--dark-gray);
+}
 * {
   box-sizing: border-box;
 }
+.mb0 {margin-bottom: 0;}
 .mb2 {margin-bottom: 2rem;}
 .mt2 {margin-top: 2rem;}
