--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -19,3 +19,33 @@
         border-right: 1px solid var(--red);
     }
 }
+.contact {
+    padding: 2rem 2rem 1rem;
+    font-size: 0.9rem;
+    font-weight: 300;
+    font-style: italic;
+    text-align: center;
+    text-shadow: 8px 6px 15px hsla(10, 100%, 63%, 61%);
+    width: 80%;
+    min-width: 350px;
+    margin: 1rem auto;
+    color: var(--light-gray);
+}
+.quotes {
+    font-style: normal;
+    font-size: 2rem;
+    font-family: sans-serif;
+    vertical-align: middle;
+}
+.copylink {
+    color: var(--dark-gray);
+    transition: all 0.2s ease-in-out;
+    &:hover {
+        background-color: var(--red);
+        color: white;
+        cursor: pointer;
+        padding: 0.2rem;
+        border-radius: 5px;
+        box-shadow: 2px 3px 5px 1px rgba(0,0,0,0.2);
+    }
+}
