--- a/styles/components/GithubCard.module.scss
+++ b/styles/components/GithubCard.module.scss
@@ -63,3 +63,8 @@
 .githubCardBody {
     height: 100%;
 }
+@media screen and (max-width: 600px) {
+    .githubCard {
+        width: 100%;
+    }
+}
