--- a/styles/components/MDXComponents.module.scss
+++ b/styles/components/MDXComponents.module.scss
@@ -1,6 +1,8 @@
 .image {
     width: 800px;
     height: auto;
+    box-shadow: 2px 2px 4px 1px var(--red-shadow);
+    border-radius: 5px;
 }
 .snippets {
     overflow-x: auto;
@@ -34,6 +36,6 @@
 }
 @media screen and (max-width: 600px) {
     .image {
-        max-width: 310px;
+        max-width: 320px;
     }
 }
