--- a/styles/components/NavMenu.module.scss
+++ b/styles/components/NavMenu.module.scss
@@ -19,6 +19,7 @@
 	a {
 		color: white;
 		padding: 0.5rem;
+		font-size: 0.8rem;
 		transition: background-color 0.2s ease-in-out;
 		&:hover {
 			border-top: 3px solid var(--red);
