--- a/styles/components/Blog/BlogCard.module.scss
+++ b/styles/components/Blog/BlogCard.module.scss
@@ -1,22 +1,22 @@
-.card {
-    margin-bottom: 1rem;
-    border-left: 3px solid var(--red);
-    padding: 0 0.5rem;
-    opacity: 0.8;
-    transition: all 0.2s ease-in-out;
-    box-shadow: 2px 2px 4px 1px var(--red-shadow);
-    h3 { 
-        margin: 0.5rem 0;
-    }
-    summary {
-        font-size: 0.9rem;
-    }
-    small {
-        font-size: 0.7rem;
-        opacity: 0.7;
-    }
+.blogCard {
     &:hover {
         background-color: var(--red-hover);
-        opacity: 1;
+        .extLink {
+            display: block !important;
+        }
     }
+}
+.tag {
+    font-size: 0.6rem;
+    font-family: monospace;
+    color: white;
+    background-color: var(--red);
+    padding: 0.3rem;
+    margin-right: 0.25rem;
+}
+.tagGroup {
+    padding-bottom: 0.5rem;
+}
+.extLink {
+    display: none !important;
 }
